MODLOGSAML-111: Increasing the coverage of ConfigurationsClient.java